src/assets/styles/root.css
*,
::before,
::after {
  --base-color: rgb(18, 18, 18);
  --primary-color: rgb(63, 80, 181);
  --primary-light-color: rgba(63, 80, 181, 0.8);
  --secondary-color: rgb(128, 0, 0);
  --secondary-light-color: rgba(128, 0, 0, 0.8);
  --info-color: rgb(33, 150, 243);
  --success-color: rgb(75, 181, 67);
  --warning-color: rgb(255, 103, 0);
  --error-color: rgb(220, 20, 49);
  --contrast-color: rgb(245, 197, 24);
}

